force-app/main/default/objects/Event_Order__c/Event_Order__c.object-meta.xml
<CustomObject>
    <label>Event Order</label>
    <nameField>
        <displayFormat>O - {00000000}</displayFormat>
        <label>Event Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>