force-app/main/default/objects/Event_Order__c/fields/Consent_Given__c.field-meta.xml
<CustomField>
    <fullName>Consent_Given__c</fullName>
    <inlineHelpText>Populated from the event registration</inlineHelpText>
    <label>Consent Given</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>