force-app/main/default/objects/Event_Order__c/fields/Date_Repayment_Made__c.field-meta.xml
<CustomField>
    <fullName>Date_Repayment_Made__c</fullName>
    <label>Date Repayment Made</label>
    <type>Date</type>
</CustomField>