force-app/main/default/objects/Event_Order__c/fields/Date_Repayment_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Repayment_Requested__c</fullName>
    <label>Date Repayment Requested</label>
    <type>Date</type>
</CustomField>