force-app/main/default/objects/Event_Order__c/fields/Discount_Code_Applied__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to store whether the discount is applied for this order</description>
    <inlineHelpText>This field is automated</inlineHelpText>
    <label>Discount Code Applied</label>
    <type>Checkbox</type>
</CustomField>