force-app/main/default/objects/Event_Order__c/fields/Discount_Code_Used__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field used to related discount used for this order</description>
    <inlineHelpText>This field is automated</inlineHelpText>
    <label>Discount Code Used</label>
    <referenceTo>Discount_Code__c</referenceTo>
    <relationshipLabel>Event Orders Discounted</relationshipLabel>
    <relationshipName>Event_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>