force-app/main/default/objects/Event_Order__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Event Email</label>
    <type>Email</type>
</CustomField>