force-app/main/default/objects/Event_Order__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipName>Ticket_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>