force-app/main/default/objects/Event_Order__c/fields/Event_Manager_Refund_Warning__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager_Refund_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine whether an Event Manager Refund Warning needs to be sent</description>
    <inlineHelpText>This field is automated</inlineHelpText>
    <label>Event Manager Refund Warning</label>
    <type>Checkbox</type>
</CustomField>