force-app/main/default/objects/Event_Order__c/fields/GDPR_Consent_Provided__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDPR Consent Provided - XX</label>
    <type>Checkbox</type>
</CustomField>