force-app/main/default/objects/Event_Order__c/fields/GDPR_Statement_Used__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Statement_Used__c</fullName>
    <label>GDPR Statement Used - XX</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>