force-app/main/default/objects/Event_Order__c/fields/Is_Group_Booking__c.field-meta.xml
<CustomField>
    <fullName>Is_Group_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Group Booking</label>
    <type>Checkbox</type>
</CustomField>