force-app/main/default/objects/Event_Order__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Event Mobile</label>
    <type>Phone</type>
</CustomField>