force-app/main/default/objects/Event_Order__c/fields/Number_of_Event_Registration__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Event_Registration__c</fullName>
    <description>Total number of Event Registrations for this Order</description>
    <inlineHelpText>Total number of Event Registrations for this Order</inlineHelpText>
    <label>Number of Event Registration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>