force-app/main/default/objects/Event_Order__c/fields/Object_for_New_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Object_for_New_Attendees__c</fullName>
    <formula>TEXT(Event__r.Object_for_New_Attendees__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object For New Attendees-XX</label>
    <type>Text</type>
</CustomField>