force-app/main/default/objects/Event_Order__c/fields/Paid_Order__c.field-meta.xml
<CustomField>
    <fullName>Paid_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Order</label>
    <type>Checkbox</type>
</CustomField>