force-app/main/default/objects/Event_Order__c/fields/Post_code__c.field-meta.xml
<CustomField>
    <fullName>Post_code__c</fullName>
    <label>Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>