force-app/main/default/objects/Event_Order__c/fields/Printed_Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>Printed_Ticket_Status__c</fullName>
    <label>Printed Ticket Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent to Printing Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>