force-app/main/default/objects/Event_Order__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <label>QR Code</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>