force-app/main/default/objects/Event_Order__c/fields/QR_Code_URL__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_URL__c</fullName>
    <label>QR Code URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>