force-app/main/default/objects/Event_Order__c/fields/Receive_SMS_notification__c.field-meta.xml
<CustomField>
    <fullName>Receive_SMS_notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive  SMS notification</label>
    <type>Checkbox</type>
</CustomField>