force-app/main/default/objects/Event_Order__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <formula>TEXT( Event__r.Record_Type_for_New_Attendees__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type for New Attendees-XX</label>
    <type>Text</type>
</CustomField>