force-app/main/default/objects/Event_Order__c/fields/Refund_Requested__c.field-meta.xml
<CustomField>
    <fullName>Refund_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>On click a ‘Refund Request’ email will be sent to the UOP Finance Team</inlineHelpText>
    <label>Refund Requested</label>
    <type>Checkbox</type>
</CustomField>