force-app/main/default/objects/Event_Order__c/fields/Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_Status__c</fullName>
    <label>Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partially Refunded</fullName>
            </value>
            <value>
                <fullName>Fully Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>