force-app/main/default/objects/Event_Order__c/fields/Repayment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Reason__c</fullName>
    <inlineHelpText>please provide full of why a request is being requested</inlineHelpText>
    <label>Repayment Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>