force-app/main/default/objects/Event_Order__c/fields/Repayment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Reference__c</fullName>
    <label>Repayment Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>