force-app/main/default/objects/Event_Order__c/fields/Send_Payment_Email_to_Order_Contact__c.field-meta.xml
<CustomField>
    <fullName>Send_Payment_Email_to_Order_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check whether event order payment email should be sent from the internal form</description>
    <inlineHelpText>This field is auto-populated from the Internal Event Registration form</inlineHelpText>
    <label>Send Payment Email to Order Contact</label>
    <type>Checkbox</type>
</CustomField>