force-app/main/default/objects/Event_Order__c/fields/Statement_Used__c.field-meta.xml
<CustomField>
    <fullName>Statement_Used__c</fullName>
    <formula>TEXT(Event__r.GDPR_Statement_Used__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statement Used</label>
    <type>Text</type>
</CustomField>