force-app/main/default/objects/Event_Order__c/fields/Ticket_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Delivery__c</fullName>
    <label>Ticket Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eTicket only</fullName>
            </value>
            <value>
                <fullName>eTicket &amp; Printed Ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>