force-app/main/default/objects/Event_Order__c/fields/Total_number_of_ticket_requested__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_ticket_requested__c</fullName>
    <description>This field is used to store number of tickets requested by the person who submitted the waiting list web form</description>
    <inlineHelpText>The number of tickets requested by the person who submitted the waiting list web form</inlineHelpText>
    <label>Total Number of Tickets Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>