force-app/main/default/objects/Event_Order__c/validationRules/Mandate_Fields_On_Refund.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Fields_On_Refund</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(  ISCHANGED(Refund_Status__c ) ,
   ISPICKVAL( Refund_Status__c ,&quot;Fully Refunded&quot;),
   OR( ISBLANK( Repayment_Reference__c ) ,
       ISBLANK( Repayment_Reason__c ),
       ISNULL( Date_Repayment_Made__c ),
       ISNULL( Date_Repayment_Requested__c )
     ) 
)</errorConditionFormula>
    <errorMessage>Fill mandatory fields : Repayment Reference, Repayment Reason, Date Repayment Requested, Date Repayment Made</errorMessage>
</ValidationRule>