force-app/main/default/objects/Event_Order__c/validationRules/Restrict_Refund_Requested.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Refund_Requested</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Refund_Requested__c  = true, ISBLANK( Repayment_Reason__c ) )</errorConditionFormula>
    <errorDisplayField>Repayment_Reason__c</errorDisplayField>
    <errorMessage>Please complete the Repayment Reason.</errorMessage>
</ValidationRule>